--- a/sass/utils/_global-styles.scss
+++ b/sass/utils/_global-styles.scss
@@ -30,6 +30,18 @@ body {
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
+
+  @include tel {
+    width: 480px;
+  }
+
+  @include tab {
+    width: 768px;
+  }
+
+  @include desk {
+    width: 1200px;
+  }
 }
 
 .section {
