--- a/css/main.css
+++ b/css/main.css
@@ -294,6 +294,8 @@ ul {
 
 img {
   display: block;
+  width: 100%;
+  height: auto;
 }
 
 body {
@@ -303,7 +305,7 @@ body {
 }
 
 .container {
-  width: 1200px;
+  width: 100%;
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
@@ -331,6 +333,13 @@ body {
 .section {
   padding-top: var(--section-padding-top);
   padding-bottom: var(--section-padding-bottom);
+}
+
+@media screen and (min-width: 480px) {
+  .section {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
 }
 
 .section__title {
