--- a/sass/utils/_global-styles.scss
+++ b/sass/utils/_global-styles.scss
@@ -15,6 +15,8 @@ ul {
 
 img {
   display: block;
+  width: 100%;
+  height: auto;
 }
 
 body {
@@ -25,7 +27,7 @@ body {
 }
 
 .container {
-  width: 1200px;
+  width: 100%;
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
@@ -47,6 +49,11 @@ body {
 .section {
   padding-top: var(--section-padding-top);
   padding-bottom: var(--section-padding-bottom);
+
+  @include tel {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
 }
 
 .section__title {
