--- a/css/main.css
+++ b/css/main.css
@@ -550,6 +550,27 @@ body {
   border: transparent;
 }
 
+@media screen and (min-width: 768px) {
+  .features {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -30px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .features__item {
+    margin-left: var(--card-set-gap);
+    width: calc(100% / 2 - 30px);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .features__item {
+    width: calc(100% / 4 - 30px);
+  }
+}
+
 .features__wrap {
   display: flex;
   justify-content: center;
