--- a/sass/components/features/_features.scss
+++ b/sass/components/features/_features.scss
@@ -1,12 +1,28 @@
 .features {
   @extend %list;
-  // display: flex;
+
+  @include tab {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -30px;
+  }
 }
+
 .features__item {
+  //   width: calc(100% / 2 -30px);
+  //   margin-left: 30px;
+
   // max-width: 270px;
-  // &:not(:last-child) {
-  //   margin-right: var(--card-set-gap);
-  // }
+  @include tab {
+    & {
+      margin-left: var(--card-set-gap);
+      width: calc(100% / 2 - 30px);
+    }
+  }
+
+  @include desk {
+    width: calc(100% / 4 - 30px);
+  }
 }
 
 .features__wrap {
