--- a/sass/components/about/_about.scss
+++ b/sass/components/about/_about.scss
@@ -1,5 +1,8 @@
 .section--padding-bottom {
   padding-bottom: var(--section-padding-bottom);
+  @media screen and (max-width: 1199px) {
+    display: none;
+  }
 }
 
 .about {
