--- a/sass/components/team/_team.scss
+++ b/sass/components/team/_team.scss
@@ -4,7 +4,7 @@
 
 .team {
   @extend %list;
-  display: flex;
+  // display: flex;
 }
 
 .team__item {
@@ -14,9 +14,9 @@
   border-radius: 0px 0px 4px 4px;
 }
 
-.team__item:not(:last-child) {
-  margin-right: var(--card-set-gap);
-}
+// .team__item:not(:last-child) {
+//   margin-right: var(--card-set-gap);
+// }
 
 .team__title {
   @include font(500, 16px, 1.19, 0.03em);
