--- a/sass/utils/_global-styles.scss
+++ b/sass/utils/_global-styles.scss
@@ -50,6 +50,9 @@ body {
   padding-top: var(--section-padding-top);
   padding-bottom: var(--section-padding-bottom);
 
+  @include desk {}
+  
+
   @include tel {
     padding-top: 60px;
     padding-bottom: 60px;
@@ -65,6 +68,11 @@ body {
   text-align: center;
 
   color: var(--title-text-color);
+
+  @include tel {
+    margin-bottom: 30px;
+    @include font(700, 28px, 1.17, 0.03em);
+  }
 }
 
 .visually-hidden {
