--- a/sass/utils/_global-styles.scss
+++ b/sass/utils/_global-styles.scss
@@ -50,15 +50,15 @@ body {
   padding-top: var(--section-padding-top);
   padding-bottom: var(--section-padding-bottom);
 
-  @include desk {}
-  
-
   @include tel {
     padding-top: 60px;
     padding-bottom: 60px;
 
     @include tab {
     }
+  }
+
+  @include desk {
   }
 }
 
