--- a/css/main.css
+++ b/css/main.css
@@ -568,8 +568,10 @@ body {
   }
 }
 
-.features__item {
-  margin-left: -30px;
+@media screen and (min-width: 768px) and (min-width: 1200px) {
+  .features {
+    flex-wrap: nowrap;
+  }
 }
 
 @media screen and (min-width: 768px) {
@@ -587,7 +589,7 @@ body {
 
 @media screen and (min-width: 480px) {
   .features__item:not(:last-child) {
-    margin-bottom: 30px;
+    padding-bottom: 30px;
   }
 }
 
@@ -665,10 +667,37 @@ body {
   background-color: #f5f4fa;
 }
 
+@media screen and (min-width: 768px) {
+  .team {
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
+
+@media screen and (min-width: 768px) and (min-width: 1200px) {
+  .team {
+    margin-left: -30px;
+  }
+}
+
 .team__item {
+  margin-bottom: 30px;
   background-color: var(--background-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+}
+
+@media screen and (min-width: 768px) {
+  .team__item {
+    margin-left: var(--card-set-gap);
+    width: calc(100% / 2 - 30px);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .team__item {
+    width: calc(100% / 4 - 30px);
+  }
 }
 
 .team__title {
