--- a/sass/components/features/_features.scss
+++ b/sass/components/features/_features.scss
@@ -5,29 +5,30 @@
     display: flex;
     flex-wrap: wrap;
     margin-left: -30px;
+
+    @include desk {
+      flex-wrap: nowrap;
+    }
   }
 }
 
 .features__item {
-    // width: calc(100% / 2 -30px);
-    margin-left: -30px;
-
-  // max-width: 270px;
+  
   @include tab {
-    & {
       margin-left: var(--card-set-gap);
       width: calc(100% / 2 - 30px);
     }
+
+    @include desk {
+      width: calc(100% / 4 - 30px);
+    }
   }
 
-  @include desk {
-    width: calc(100% / 4 - 30px);
-  }
-}
+  
 
 .features__item:not(:last-child) {
   @include tel {
-    margin-bottom: 30px;
+    padding-bottom: 30px;
   }
 }
 
