--- a/sass/components/team/_team.scss
+++ b/sass/components/team/_team.scss
@@ -4,19 +4,56 @@
 
 .team {
   @extend %list;
-  // display: flex;
+
+  @include tab {
+    display: flex;
+    flex-wrap: wrap;
+
+    @include desk {
+      margin-left: -30px;
+      }
+  }
+  
+  
 }
 
 .team__item {
+  margin-bottom: 30px;
   background-color: var(--background-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+
+  @include tab {
+      margin-left: var(--card-set-gap);
+      width: calc(100% / 2 - 30px);
+  }
+      @include desk { 
+          width: calc(100% / 4 - 30px);
+      }
 }
 
-// .team__item:not(:last-child) {
-//   margin-right: var(--card-set-gap);
+// .team__item:nth-child(4) {
+//   @include tab {
+//   margin-bottom: 0;
 // }
+// }
+
+// .team__item:not(:last-child) {
+  // margin-bottom: 30px;
+  // @include tel {}
+
+  // @include desk {
+  //   margin-bottom: 0;
+  // }
+
+  
+
+  // @include desk {
+  //   margin-right: var(--card-set-gap);
+  // }
+// }
+
 
 .team__title {
   @include font(500, 16px, 1.19, 0.03em);
