--- a/sass/utils/_global-styles.scss
+++ b/sass/utils/_global-styles.scss
@@ -50,17 +50,14 @@ body {
   padding-top: var(--section-padding-top);
   padding-bottom: var(--section-padding-bottom);
 
-  @include tel {
+  @include tel  {
     padding-top: 60px;
     padding-bottom: 60px;
 
-    @include tab {
-    }
+    @include tab{}
+  }
   }
 
-  @include desk {
-  }
-}
 
 .section__title {
   margin-bottom: 50px;
