--- a/css/main.css
+++ b/css/main.css
@@ -587,10 +587,8 @@ body {
   }
 }
 
-@media screen and (min-width: 480px) {
-  .features__item:not(:last-child) {
-    padding-bottom: 30px;
-  }
+.features__item:not(:last-child) {
+  padding-bottom: 30px;
 }
 
 .features__wrap {
@@ -671,11 +669,6 @@ body {
   .team {
     display: flex;
     flex-wrap: wrap;
-  }
-}
-
-@media screen and (min-width: 768px) and (min-width: 1200px) {
-  .team {
     margin-left: -30px;
   }
 }
@@ -734,17 +727,38 @@ body {
 
 .customers {
   display: flex;
+  flex-wrap: wrap;
+  margin-left: -30px;
 }
 
-.customers__item:not(:last-child) {
-  margin-right: 30px;
+.customers__item {
+  margin-left: var(--card-set-gap);
+  width: calc(100% / 2 - 30px);
+}
+
+@media screen and (min-width: 768px) {
+  .customers__item {
+    width: calc(100% / 3 - 30px);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .customers__item {
+    width: calc(100% / 6 - 30px);
+  }
+}
+
+@media screen and (max-width: 1199px) {
+  .customers__item {
+    margin-bottom: 30px;
+  }
 }
 
 .customers__link {
   transition-property: border-color, color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  width: 170px;
+  width: 100%;
   height: 92px;
   border: 1px solid #afb1b8;
   border-radius: 4px;
@@ -752,6 +766,24 @@ body {
   align-items: center;
   justify-content: center;
   color: #afb1b8;
+}
+
+@media screen and (min-width: 480px) {
+  .customers__link {
+    width: 210px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .customers__link {
+    width: 226px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .customers__link {
+    width: 170px;
+  }
 }
 
 .customers__link:hover, .customers__link:focus {
