--- a/sass/components/customers/_customers.scss
+++ b/sass/components/customers/_customers.scss
@@ -1,17 +1,41 @@
 .customers {
   @extend %list;
   display: flex;
+  flex-wrap: wrap;
+  margin-left: -30px;
 }
-.customers__item:not(:last-child) {
-  margin-right: 30px;
-}
+
+.customers__item {
+  margin-left: var(--card-set-gap);
+  width: calc(100% / 2 - 30px);
+
+  @include tab {
+    width: calc(100% / 3 - 30px);  
+  }
+
+  @include desk {
+    width: calc(100% / 6 - 30px);
+  }
+
+  @media screen and (max-width: 1199px) {
+    margin-bottom: 30px;
+  }
+    
+  }
+
+
+
+
+// .customers__item:not(:last-child) {
+//   margin-right: 30px;
+// }
 
 .customers__link {
   transition-property: border-color, color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
-  width: 170px;
+  width: 100%;
   height: 92px;
   border: 1px solid #afb1b8;
   border-radius: 4px;
@@ -19,6 +43,18 @@
   align-items: center;
   justify-content: center;
   color: #afb1b8;
+
+  @include tel {
+    width: 210px;
+  }
+
+  @include tab {
+    width: 226px;
+  }
+
+  @include desk {
+    width: 170px;
+  }
 
   &:hover,
   &:focus {
