--- a/sass/components/header/_header-nav.scss
+++ b/sass/components/header/_header-nav.scss
@@ -1,7 +1,8 @@
 .nav-list {
   @extend %list;
-  display: flex;
-  align-items: center;
+  display: none;
+  // display: flex;
+  // align-items: center;
 
   .nav-list__link {
     text-decoration: none;
