--- a/css/main.css
+++ b/css/main.css
@@ -454,8 +454,7 @@ body {
 }
 
 .nav-list {
-  display: flex;
-  align-items: center;
+  display: none;
 }
 
 .nav-list .nav-list__link {
@@ -477,8 +476,7 @@ body {
 }
 
 .header-contacts {
-  display: flex;
-  margin-left: auto;
+  display: none;
 }
 
 .header-contacts__link {
@@ -827,11 +825,6 @@ body {
   color: var(--additional-font-color);
   background-color: var(--accent-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-}
-
-.projects {
-  display: flex;
-  flex-wrap: wrap;
 }
 
 .project-card {
