--- a/sass/components/portfolio-page/projects-example/_projects-examples.scss
+++ b/sass/components/portfolio-page/projects-example/_projects-examples.scss
@@ -1,7 +1,7 @@
 .projects {
   @extend %list;
-  display: flex;
-  flex-wrap: wrap;
+  // display: flex;
+  // flex-wrap: wrap;
 }
 .project-card {
   flex-basis: calc((100% - 60px) / 3);
