--- a/sass/components/header/_header.scss
+++ b/sass/components/header/_header.scss
@@ -9,7 +9,7 @@
   }
 }
 
-.menu-open-btn {
+.menu-open-btn, .menu-close-btn{
   display: block;
   margin-left: auto;
 }
@@ -21,7 +21,6 @@ display: block;
 .tel-menu {
 position: absolute;
 background-color: var(--background-color); 
-list-style-type: none;
 width: 100vw;
 height: 100vh;
 top: 0;
