--- a/css/main.css
+++ b/css/main.css
@@ -504,6 +504,20 @@ body {
   color: var(--accent-color);
 }
 
+.tel-menu-socials {
+  display: flex;
+}
+
+.tel-menu-socials__item:not(:first-child) {
+  border-left: 1px solid rgba(33, 33, 33, 0.2);
+  padding: 0 10px;
+  height: 22px;
+}
+
+.tel-menu-socials + .tel-menu-socials__item {
+  padding-left: 10px;
+}
+
 .tel-menu-socials__link {
   font-weight: 500;
   font-size: 18px;
