--- a/sass/components/header/_header.scss
+++ b/sass/components/header/_header.scss
@@ -40,7 +40,6 @@ display: flex;
 flex-direction: column;
 justify-content: space-between;
 }
-
 }
 
 .tel-menu-list {
@@ -80,7 +79,19 @@ color: var(--title-text-color);
 
 .tel-menu-socials {
   @extend %list;
+  display: flex;
 }
+
+.tel-menu-socials__item:not(:first-child) {
+  border-left: 1px solid rgba(33, 33, 33, 0.2);
+  padding: 0 10px;
+  height: 22px;
+}
+
+.tel-menu-socials+.tel-menu-socials__item {
+  padding-left: 10px;
+}
+
 
 .tel-menu-socials__link {
   @include font (500, 18px, 1.22, 0.02em);
