--- a/sass/components/header/_header-contacts.scss
+++ b/sass/components/header/_header-contacts.scss
@@ -1,9 +1,17 @@
 .header-contacts {
   @extend %list;
   display: none;
-  // display: flex;
-  // margin-left: auto;
+  @include tab {
+  display: flex;
+  flex-direction: column;
+  margin-left: auto;
+  @include desk {
+    flex-direction: row;
+  }
+  }
 }
+
+
 
 .header-contacts__link {
   display: flex;
@@ -18,8 +26,13 @@
   fill: currentColor;
 }
 
-.header-contacts > .header-contacts__item {
-  margin-right: 50px;
+.header-contacts__item:first-child {
+  @include tab {
+    margin-bottom: 10px;
+  }
+  @include desk {
+    margin-right: 50px;
+  }
 }
 
 .nav-list__link--current {
