--- a/sass/components/header/_header.scss
+++ b/sass/components/header/_header.scss
@@ -1,7 +1,17 @@
 .header {
-  padding-top: 24px;
-  padding-bottom: 24px;
+  padding-top: 16px;
+  padding-bottom: 16px;
   border-bottom: 1px solid #ececec;
+
+  @include tab {
+  padding-top: 21px;
+  padding-bottom: 21px;
+  }
+
+  @include desk {
+    padding-top: 24px;
+    padding-bottom: 24px;
+  }
 
   .header__container {
     display: flex;
@@ -12,18 +22,24 @@
 .menu-open-btn, .menu-close-btn{
   display: block;
   margin-left: auto;
+  border: none;
+  background-color: transparent;
 
   &:hover, &:focus {
     fill: var(--accent-color);
   }
 }
 
-.menu-close-btn {
-display: block;
+.menu-open-btn {
+  @include tab {
+  display: none;
+  }
 }
 
 .tel-menu {
 position: fixed;
+overflow: auto;
+z-index: 1;
 background-color: var(--background-color); 
 width: 100vw;
 height: 100vh;
@@ -82,15 +98,18 @@ color: var(--title-text-color);
   display: flex;
 }
 
-.tel-menu-socials__item:not(:first-child) {
-  border-left: 1px solid rgba(33, 33, 33, 0.2);
-  padding: 0 10px;
-  height: 22px;
+.tel-menu-socials__item {
+  padding-right: 10px;
+
+  &:not(:first-child) {
+    border-left: 1px solid rgba(33, 33, 33, 0.2);
+    padding: 0 10px;
+    height: 22px;
+  }
 }
 
-.tel-menu-socials+.tel-menu-socials__item {
-  padding-left: 10px;
-}
+
+
 
 
 .tel-menu-socials__link {
