--- a/css/main.css
+++ b/css/main.css
@@ -428,31 +428,6 @@ body {
   list-style: none;
 }
 
-.header {
-  padding-top: 16px;
-  padding-bottom: 16px;
-  border-bottom: 1px solid #ececec;
-}
-
-@media screen and (min-width: 768px) {
-  .header {
-    padding-top: 21px;
-    padding-bottom: 21px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .header {
-    padding-top: 24px;
-    padding-bottom: 24px;
-  }
-}
-
-.header .header__container {
-  display: flex;
-  align-items: center;
-}
-
 .menu-open-btn, .menu-close-btn {
   display: block;
   margin-left: auto;
@@ -547,6 +522,31 @@ body {
   text-decoration: none;
 }
 
+.header {
+  padding-top: 16px;
+  padding-bottom: 16px;
+  border-bottom: 1px solid #ececec;
+}
+
+@media screen and (min-width: 768px) {
+  .header {
+    padding-top: 21px;
+    padding-bottom: 21px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .header {
+    padding-top: 24px;
+    padding-bottom: 24px;
+  }
+}
+
+.header .header__container {
+  display: flex;
+  align-items: center;
+}
+
 .logo {
   text-decoration: none;
   font-family: Raleway, sans-serif;
@@ -632,6 +632,7 @@ body {
 @media screen and (min-width: 1200px) {
   .header-contacts__item:first-child {
     margin-right: 50px;
+    margin-bottom: 0;
   }
 }
 
@@ -652,7 +653,6 @@ body {
 }
 
 .hero {
-  width: 480px;
   height: 400px;
   padding-top: 118px;
   padding-bottom: 118px;
@@ -668,14 +668,12 @@ body {
 
 @media screen and (min-width: 768px) {
   .hero {
-    width: 768px;
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/студия/herobg768.jpg);
   }
 }
 
 @media screen and (min-width: 1200px) {
   .hero {
-    width: 1600px;
     height: 600px;
     padding-top: 200px;
     padding-bottom: 200px;
@@ -1084,15 +1082,33 @@ body {
 
 .footer .footer-wrap {
   display: flex;
-  align-items: baseline;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+@media screen and (min-width: 1200px) {
+  .footer .footer-wrap {
+    flex-direction: row;
+    align-items: baseline;
+  }
 }
 
 .footer__logo {
   color: var(--additional-font-color);
 }
 
-.address-container {
-  flex-grow: 1;
+@media screen and (max-width: 767px) {
+  .address-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .address-container {
+    flex-grow: 1;
+  }
 }
 
 .address {
@@ -1106,7 +1122,13 @@ body {
 }
 
 .address__item:not(:last-child) {
-  margin-bottom: 9px;
+  margin-bottom: 8px;
+}
+
+@media screen and (min-width: 1200px) {
+  .address__item:not(:last-child) {
+    margin-bottom: 9px;
+  }
 }
 
 .address__info {
@@ -1127,7 +1149,22 @@ body {
 .footer-socials {
   width: 206px;
   height: 80px;
-  margin-left: 70px;
+}
+
+@media screen and (max-width: 1199px) {
+  .footer-socials {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-right: auto;
+    margin-left: auto;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-socials {
+    margin-left: 70px;
+  }
 }
 
 .socials__link--footer {
@@ -1135,26 +1172,53 @@ body {
   background-color: rgba(255, 255, 255, 0.1);
 }
 
-.footer-subscribe {
-  margin-left: 93px;
+@media screen and (max-width: 1199px) {
+  .footer-subscribe {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
-.subscribe-form {
-  display: flex;
-  align-items: center;
+@media screen and (min-width: 1200px) {
+  .footer-subscribe {
+    margin-left: 93px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .subscribe-form {
+    display: flex;
+    align-items: center;
+  }
 }
 
 .subscribe-form__input {
-  width: 358px;
+  width: auto;
   height: 50px;
   padding: 15px 16px;
-  margin-right: 12px;
+  margin-bottom: 20px;
   color: var(--hero-btn-texr-color);
   background-color: transparent;
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   outline: none;
   border-radius: 4px;
+}
+
+@media screen and (min-width: 480px) {
+  .subscribe-form__input {
+    width: 450px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .subscribe-form__input {
+    margin-right: 12px;
+    margin-bottom: 0;
+    width: 358px;
+    height: 50px;
+  }
 }
 
 .footer-input::placeholder {
@@ -1168,6 +1232,8 @@ body {
   width: 200px;
   height: 50px;
   padding: 10px 28px;
+  margin-right: auto;
+  margin-left: auto;
   display: flex;
   align-items: center;
   justify-content: center;
