--- a/sass/components/footer/_footer-address.scss
+++ b/sass/components/footer/_footer-address.scss
@@ -1,5 +1,13 @@
 .address-container {
-  flex-grow: 1;
+  @media screen and (max-width:767px) {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  }
+
+  @include desk {
+    flex-grow: 1;
+  }
 }
 
 .address {
@@ -17,7 +25,11 @@
 }
 
 .address__item:not(:last-child) {
-  margin-bottom: 9px;
+  margin-bottom: 8px;
+
+  @include desk {
+    margin-bottom: 9px;
+  }
 }
 
 .address__info {
