--- a/sass/components/footer/_footer-subscribe.scss
+++ b/sass/components/footer/_footer-subscribe.scss
@@ -1,17 +1,29 @@
 .footer-subscribe {
-  margin-left: 93px;
+  @media screen and (max-width: 1199px) {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  @include desk {
+    margin-left: 93px;
+  }
+ 
 }
 
 .subscribe-form {
-  display: flex;
-  align-items: center;
+  @include desk {
+    display: flex;
+    align-items: center;
+  }
 }
 
 .subscribe-form__input {
-  width: 358px;
+  width: auto;
   height: 50px;
   padding: 15px 16px;
-  margin-right: 12px;
+  margin-bottom: 20px;
+  
 
   color: var(--hero-btn-texr-color);
   background-color: transparent;
@@ -19,6 +31,16 @@
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   outline: none;
   border-radius: 4px;
+  @include tel {
+    width: 450px;
+  }
+
+  @include desk {
+  margin-right: 12px;
+  margin-bottom: 0;
+  width: 358px;
+  height: 50px;
+  }
 }
 
 .footer-input::placeholder {
