--- a/sass/components/footer/_footer.scss
+++ b/sass/components/footer/_footer.scss
@@ -1,14 +1,20 @@
 .footer {
   padding-top: 60px;
   padding-bottom: 60px;
-
   font-style: normal;
   @include font(null, 14px, 1.7, 0.03em);
 
   background-color: var(--footer-background-color);
 
   .footer-wrap {
+    // height: 100%;
     display: flex;
-    align-items: baseline;
+    flex-direction: column;
+    justify-content: space-between;
+
+    @include desk {
+      flex-direction: row;
+      align-items: baseline;
+    }
   }
 }
