--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,6 +4,7 @@
 @import './utils/global-styles';
 @import './utils/placeholders';
 
+@import './components/header/tel-menu';
 @import './components/header/header';
 @import './components/header/header-logo';
 @import './components/header/header-nav';
