--- a/sass/components/footer/_footer.scss
+++ b/sass/components/footer/_footer.scss
@@ -7,14 +7,27 @@
   background-color: var(--footer-background-color);
 
   .footer-wrap {
-    // height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-
     @include desk {
+      display: flex;
+      justify-content: space-between;
       flex-direction: row;
       align-items: baseline;
     }
   }
 }
+
+.address-socials-wrap {
+    @include tab {
+      padding-left: 76px;
+      padding-right: 89px;
+      margin-bottom: 60px;
+      display: flex;
+      justify-content: space-between;
+      align-items: baseline;
+    }
+    @include desk {
+      padding: 0;
+      margin-bottom: 0;
+    }
+  }
+
