--- a/sass/components/footer/_footer-address.scss
+++ b/sass/components/footer/_footer-address.scss
@@ -1,20 +1,32 @@
 .address-container {
-  @media screen and (max-width:767px) {
+  margin-bottom: 60px;
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  @include tab {
+    margin-bottom: 0;
+  }
+
+  @include desk {
+    align-items: baseline;
+  }
   }
 
   @include desk {
     flex-grow: 1;
   }
-}
+
 
 .address {
   margin-top: 20px;
 }
 .address__list {
   @extend %list;
+  @media screen and (max-width:1199px) {
+    text-align: center;
+  }
+  
 }
 
 .address__mail--link,
