--- a/sass/components/footer/_footer-socials.scss
+++ b/sass/components/footer/_footer-socials.scss
@@ -7,19 +7,22 @@
 }
 
 .footer-socials {
-  width: 206px;
-  height: 80px;
-  @media screen and (max-width: 1199px) {
+    width: 206px;
+    height: 80px;
+    margin-bottom: 60px;
+  
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-right: auto;
     margin-left: auto;
-  }
 
-  
+  @include tab {
+    margin: 0 ;
+  }
   @include desk {
     margin-left: 70px;
+    align-items: baseline;
   }
   
 }
