--- a/sass/components/footer/_footer-subscribe.scss
+++ b/sass/components/footer/_footer-subscribe.scss
@@ -16,10 +16,11 @@
     display: flex;
     align-items: center;
   }
+
 }
 
 .subscribe-form__input {
-  width: auto;
+  width: 90vw;
   height: 50px;
   padding: 15px 16px;
   margin-bottom: 20px;
