--- a/sass/components/team/_team.scss
+++ b/sass/components/team/_team.scss
@@ -1,5 +1,9 @@
 .section--team-background {
   background-color: #f5f4fa;
+@include tel {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
 }
 
 .team {
@@ -29,28 +33,6 @@
           width: calc(100% / 4 - 30px);
       }
 }
-
-// .team__item:nth-child(4) {
-//   @include tab {
-//   margin-bottom: 0;
-// }
-// }
-
-// .team__item:not(:last-child) {
-  // margin-bottom: 30px;
-  // @include tel {}
-
-  // @include desk {
-  //   margin-bottom: 0;
-  // }
-
-  
-
-  // @include desk {
-  //   margin-right: var(--card-set-gap);
-  // }
-// }
-
 
 .team__title {
   @include font(500, 16px, 1.19, 0.03em);
