--- a/css/main.css
+++ b/css/main.css
@@ -969,8 +969,21 @@ body {
 
 .filter {
   display: flex;
-  justify-content: center;
-  margin-bottom: 50px;
+  flex-wrap: wrap;
+  margin-bottom: 40px;
+}
+
+@media screen and (min-width: 768px) {
+  .filter {
+    justify-content: center;
+    margin-bottom: 40px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .filter {
+    margin-bottom: 50px;
+  }
 }
 
 .filter li:not(:last-child) {
@@ -985,6 +998,7 @@ body {
   border: transparent;
   padding: 6px 22px;
   min-width: 73px;
+  margin-bottom: 15px;
   cursor: pointer;
   font-family: inherit;
   font-weight: 500;
@@ -995,16 +1009,37 @@ body {
   background-color: var(--button-background-color);
 }
 
+@media screen and (min-width: 768px) {
+  .filter__button {
+    margin-bottom: 0;
+  }
+}
+
 .filter__button:hover, .filter__button:focus {
   color: var(--additional-font-color);
   background-color: var(--accent-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
-.project-card {
-  flex-basis: calc((100% - 60px) / 3);
-  margin-right: 30px;
-  margin-bottom: 30px;
+@media screen and (min-width: 768px) {
+  .projects {
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .project-card {
+    flex-basis: calc((100% - 30px) / 2);
+    margin-right: 30px;
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .project-card {
+    flex-basis: calc((100% - 60px) / 3);
+  }
 }
 
 .project-card__link {
@@ -1320,8 +1355,8 @@ body {
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 528px;
-  min-height: 581px;
+  width: auto;
+  min-height: 609px;
   transform: translate(-50%, -50%) scale(1);
   transition-property: transform;
   transition-duration: 250ms;
@@ -1330,6 +1365,19 @@ body {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   padding: 40px;
+}
+
+@media screen and (min-width: 480px) {
+  .modal {
+    width: 450px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+    min-height: 581px;
+  }
 }
 
 .close-button {
@@ -1442,11 +1490,21 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 14px;
-  line-height: 1.71;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   cursor: pointer;
   color: #757575;
+}
+
+@media screen and (min-width: 1200px) {
+  .modal__checkbox-label {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+  }
 }
 
 .modal__checkbox-label span {
