--- a/sass/components/modal/_modal.scss
+++ b/sass/components/modal/_modal.scss
@@ -8,8 +8,8 @@
   top: 50%;
   left: 50%;
 
-  width: 528px;
-  min-height: 581px;
+  width: auto;
+  min-height: 609px;
 
   transform: translate(-50%, -50%) scale(1);
   transition-property: transform;
@@ -21,6 +21,13 @@
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   padding: 40px;
+@include tel {
+  width: 450px;
+}
+  @include desk {
+  width: 528px;
+  min-height: 581px;
+  }
 }
 
 .close-button {
@@ -135,7 +142,12 @@
   align-items: center;
   justify-content: center;
 
-  @include font(null, 14px, 1.71, 0.03em);
+  @include font(400, 12px, 1.17, 0.03em);
+
+ @include desk {
+  @include font(400, 14px, 1.71, 0.03em);
+}
+  
   cursor: pointer;
 
   color: #757575;
