--- a/css/main.css
+++ b/css/main.css
@@ -660,7 +660,7 @@ body {
   margin-right: auto;
   text-align: center;
   background-color: var(--background-hero-color);
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/студия/herobg480.jpg);
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/студия/hero-bg-tel.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -668,7 +668,7 @@ body {
 
 @media screen and (min-width: 768px) {
   .hero {
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/студия/herobg768.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/студия/hero-bg-tab.jpg);
   }
 }
 
@@ -677,7 +677,7 @@ body {
     height: 600px;
     padding-top: 200px;
     padding-bottom: 200px;
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/студия/herobg.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/студия/hero-bg-desk.jpg);
   }
 }
 
