--- a/sass/components/hero/_hero.scss
+++ b/sass/components/hero/_hero.scss
@@ -6,6 +6,8 @@
   margin-right: auto;
   text-align: center;
 
+  border-color: adjust-hue($color: #000000, $degrees: 0);
+
 
   background-color: var(--background-hero-color);
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
