--- a/css/main.css
+++ b/css/main.css
@@ -331,14 +331,14 @@ body {
 }
 
 .section {
-  padding-top: var(--section-padding-top);
-  padding-bottom: var(--section-padding-bottom);
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 1200px) {
   .section {
-    padding-top: 60px;
-    padding-bottom: 60px;
+    padding-top: var(--section-padding-top);
+    padding-bottom: var(--section-padding-bottom);
   }
 }
 
@@ -747,19 +747,12 @@ body {
   .features {
     display: flex;
     flex-wrap: wrap;
-    margin-left: -30px;
-  }
-}
-
-@media screen and (min-width: 768px) and (min-width: 1200px) {
-  .features {
-    flex-wrap: nowrap;
+    gap: 30px;
   }
 }
 
 @media screen and (min-width: 768px) {
   .features__item {
-    margin-left: var(--card-set-gap);
     width: calc(100% / 2 - 30px);
   }
 }
@@ -770,8 +763,10 @@ body {
   }
 }
 
-.features__item:not(:last-child) {
-  padding-bottom: 30px;
+@media screen and (max-width: 767px) {
+  .features__item:not(:last-child) {
+    margin-bottom: 30px;
+  }
 }
 
 .features__wrap {
@@ -848,38 +843,23 @@ body {
   background-color: #f5f4fa;
 }
 
-@media screen and (min-width: 480px) {
-  .section--team-background {
-    padding-top: 60px;
-    padding-bottom: 60px;
-  }
-}
-
 @media screen and (min-width: 768px) {
   .team {
     display: flex;
     flex-wrap: wrap;
-    margin-left: -30px;
+    gap: 30px;
   }
 }
 
 .team__item {
-  margin-bottom: 30px;
   background-color: var(--background-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
 
-@media screen and (min-width: 768px) {
-  .team__item {
-    margin-left: var(--card-set-gap);
-    width: calc(100% / 2 - 30px);
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .team__item {
-    width: calc(100% / 4 - 30px);
+@media screen and (max-width: 767px) {
+  .team__item:not(:last-child) {
+    margin-bottom: 30px;
   }
 }
 
@@ -918,30 +898,8 @@ body {
 .customers {
   display: flex;
   flex-wrap: wrap;
-  margin-left: -30px;
-}
-
-.customers__item {
-  margin-left: var(--card-set-gap);
-  width: calc(100% / 2 - 30px);
-}
-
-@media screen and (min-width: 768px) {
-  .customers__item {
-    width: calc(100% / 3 - 30px);
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .customers__item {
-    width: calc(100% / 6 - 30px);
-  }
-}
-
-@media screen and (max-width: 1199px) {
-  .customers__item {
-    margin-bottom: 30px;
-  }
+  gap: 30px;
+  justify-content: center;
 }
 
 .customers__link {
@@ -956,6 +914,7 @@ body {
   align-items: center;
   justify-content: center;
   color: #afb1b8;
+  width: 100%;
 }
 
 @media screen and (min-width: 480px) {
@@ -1043,14 +1002,14 @@ body {
   .projects {
     display: flex;
     flex-wrap: wrap;
+    gap: 30px;
   }
 }
 
 @media screen and (min-width: 768px) {
   .project-card {
     flex-basis: calc((100% - 30px) / 2);
-    margin-right: 30px;
-    margin-bottom: 30px;
+    margin-bottom: 0;
   }
 }
 
@@ -1087,6 +1046,12 @@ body {
   background-color: rgba(33, 150, 243, 0.9);
 }
 
+@media screen and (max-width: 767px) {
+  .project-card:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
+
 .project-card__link:hover .project-card__overlay,
 .project-card__link:focus .project-card__overlay {
   transform: translateY(0);
@@ -1098,14 +1063,6 @@ body {
   transition-property: box-shadow;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.project-card:nth-child(3n) {
-  margin-right: 0;
-}
-
-.project-card:nth-last-child(-n + 3) {
-  margin-bottom: 0;
 }
 
 .project-card__title {
