--- a/sass/components/features/_features.scss
+++ b/sass/components/features/_features.scss
@@ -4,18 +4,18 @@
   @include tab {
     display: flex;
     flex-wrap: wrap;
-    margin-left: -30px;
+    gap: 30px;
 
-    @include desk {
-      flex-wrap: nowrap;
-    }
+    // @include desk {
+    //   // flex-wrap: nowrap;
+    // }
   }
 }
 
 .features__item {
   
   @include tab {
-      margin-left: var(--card-set-gap);
+      // margin-left: var(--card-set-gap);
       width: calc(100% / 2 - 30px);
     }
 
@@ -27,7 +27,9 @@
   
 
 .features__item:not(:last-child) {
-  padding-bottom: 30px;
+ @include tel-only {
+   margin-bottom: 30px
+ }
 }
 
 
