--- a/sass/components/team/_team.scss
+++ b/sass/components/team/_team.scss
@@ -1,9 +1,5 @@
 .section--team-background {
   background-color: #f5f4fa;
-@include tel {
-  padding-top: 60px;
-  padding-bottom: 60px;
-}
 }
 
 .team {
@@ -12,26 +8,23 @@
   @include tab {
     display: flex;
     flex-wrap: wrap;
-    margin-left: -30px;
+    gap: 30px;
   }
   
   
 }
 
 .team__item {
-  margin-bottom: 30px;
   background-color: var(--background-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 
-  @include tab {
-      margin-left: var(--card-set-gap);
-      width: calc(100% / 2 - 30px);
-  }
-      @include desk { 
-          width: calc(100% / 4 - 30px);
-      }
+  
+.team__item:not(:last-child) {
+  @include tel-only {
+    margin-bottom: 30px;
+    }
 }
 
 .team__title {
