--- a/sass/utils/_mixin.scss
+++ b/sass/utils/_mixin.scss
@@ -11,6 +11,12 @@
   }
 }
 
+@mixin tel-only {
+  @media screen and (max-width: 767px) {
+    @content;
+  }
+}
+
 @mixin tab {
   @media screen and (min-width: 768px) {
     @content;
