--- a/sass/components/portfolio-page/projects-example/_projects-examples.scss
+++ b/sass/components/portfolio-page/projects-example/_projects-examples.scss
@@ -20,7 +20,10 @@
   
 }
 .project-card__link {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+
   text-decoration: none;
 }
 .project-card__wrap {
@@ -78,7 +81,8 @@
 }
 
 .project-card__content {
+  flex-grow: 1;
   padding: 20px 24px;
   border: 1px solid #eeeeee;
-  border-top: none;
+//   border-top: none;
 }
