--- a/sass/components/portfolio-page/projects-example/_projects-examples.scss
+++ b/sass/components/portfolio-page/projects-example/_projects-examples.scss
@@ -17,8 +17,8 @@
   @include desk {
     flex-basis: calc((100% - 60px) / 3);
   }
-  
 }
+
 .project-card__link {
   display: flex;
   flex-direction: column;
@@ -84,5 +84,5 @@
   flex-grow: 1;
   padding: 20px 24px;
   border: 1px solid #eeeeee;
-//   border-top: none;
+  border-top: none;
 }
