--- a/sass/components/modal/_modal.scss
+++ b/sass/components/modal/_modal.scss
@@ -9,7 +9,7 @@
   left: 50%;
 
   width: auto;
-  min-height: 609px;
+  // min-height: 609px;
 
   transform: translate(-50%, -50%) scale(1);
   transition-property: transform;
