--- a/css/main.css
+++ b/css/main.css
@@ -343,20 +343,20 @@ body {
 }
 
 .section__title {
-  margin-bottom: 50px;
+  margin-bottom: 30px;
   font-weight: 700;
-  font-size: 36px;
+  font-size: 28px;
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-align: center;
   color: var(--title-text-color);
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 1200px) {
   .section__title {
-    margin-bottom: 30px;
+    margin-bottom: 50px;
     font-weight: 700;
-    font-size: 28px;
+    font-size: 36px;
     line-height: 1.17;
     letter-spacing: 0.03em;
   }
@@ -467,6 +467,16 @@ body {
   justify-content: space-between;
 }
 
+.tel-menu-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.tel-menu-middle {
+  margin-bottom: 64px;
+}
+
 .tel-menu-list__item:not(:last-child), .tel-menu-contacts__item:not(:last-child) {
   margin-bottom: 32px;
 }
@@ -557,8 +567,10 @@ body {
   color: var(--title-text-color);
 }
 
-.logo__nav {
-  margin-right: 93px;
+@media screen and (min-width: 768px) {
+  .logo__nav {
+    margin-right: 88px;
+  }
 }
 
 .nav-list {
@@ -753,13 +765,13 @@ body {
 
 @media screen and (min-width: 768px) {
   .features__item {
-    width: calc(100% / 2 - 30px);
+    width: calc((100% - 30px) / 2);
   }
 }
 
 @media screen and (min-width: 1200px) {
   .features__item {
-    width: calc(100% / 4 - 30px);
+    width: calc((100% - 90px) / 4);
   }
 }
 
@@ -788,6 +800,12 @@ body {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--title-text-color);
+}
+
+@media screen and (max-width: 767px) {
+  .features__title {
+    text-align: center;
+  }
 }
 
 .features__text {
@@ -953,7 +971,7 @@ body {
 @media screen and (min-width: 768px) {
   .filter {
     justify-content: center;
-    margin-bottom: 40px;
+    margin-bottom: 30px;
   }
 }
 
@@ -967,7 +985,13 @@ body {
   margin-right: 8px;
 }
 
-.filter__button {
+@media screen and (max-width: 767px) {
+  .filter__item:nth-child(-n + 3) {
+    margin-bottom: 15px;
+  }
+}
+
+.filter__item-button {
   transition-property: background-color, color, box-shadow;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -975,7 +999,6 @@ body {
   border: transparent;
   padding: 6px 22px;
   min-width: 73px;
-  margin-bottom: 15px;
   cursor: pointer;
   font-family: inherit;
   font-weight: 500;
@@ -986,13 +1009,7 @@ body {
   background-color: var(--button-background-color);
 }
 
-@media screen and (min-width: 768px) {
-  .filter__button {
-    margin-bottom: 0;
-  }
-}
-
-.filter__button:hover, .filter__button:focus {
+.filter__item-button:hover, .filter__item-button:focus {
   color: var(--additional-font-color);
   background-color: var(--accent-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
@@ -1109,19 +1126,21 @@ body {
   }
 }
 
+.address-socials-wrap {
+  margin-bottom: 60px;
+}
+
 @media screen and (min-width: 768px) {
   .address-socials-wrap {
-    padding-left: 76px;
-    padding-right: 89px;
-    margin-bottom: 60px;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: baseline;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .address-socials-wrap {
+    flex-grow: 1;
     padding: 0;
     margin-bottom: 0;
   }
@@ -1146,6 +1165,7 @@ body {
 
 @media screen and (min-width: 1200px) {
   .address-container {
+    flex-grow: 1;
     align-items: baseline;
   }
 }
@@ -1196,14 +1216,10 @@ body {
 }
 
 .footer-socials {
-  width: 206px;
   height: 80px;
-  margin-bottom: 60px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-right: auto;
-  margin-left: auto;
 }
 
 @media screen and (min-width: 768px) {
@@ -1334,7 +1350,6 @@ body {
   top: 50%;
   left: 50%;
   width: auto;
-  min-height: 609px;
   transform: translate(-50%, -50%) scale(1);
   transition-property: transform;
   transition-duration: 250ms;
