--- a/sass/components/portfolio-page/filter-buttons/_filter-buttons.scss
+++ b/sass/components/portfolio-page/filter-buttons/_filter-buttons.scss
@@ -6,7 +6,7 @@
   
   @include tab {
    justify-content: center;
-   margin-bottom: 40px;
+   margin-bottom: 30px;
   }
   
   @include desk {
@@ -19,7 +19,13 @@
   }
 }
 
-.filter__button {
+.filter__item:nth-child(-n + 3) {
+  @include tel-only {
+    margin-bottom: 15px;
+  }
+}
+
+.filter__item-button {
   transition-property: background-color, color, box-shadow;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -28,11 +34,6 @@
   border: transparent;
   padding: 6px 22px;
   min-width: 73px;
-  margin-bottom: 15px;
-
-  @include tab {
-    margin-bottom: 0;
-  }
 
   cursor: pointer;
   font-family: inherit;
